name:                ide-backend-yesod
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Arne Link
maintainer:          mail@arne-link.de
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          refreshing.html
                      
extra-source-files:
  *.pem

executable ydevel
  main-is:             Devel.hs
  other-modules:       Devel.Cabal
                     , Devel.CmdLine
                     , Devel.Git
                     , Devel.Deps
                     , Filesystem.Path.Find
                     , Filesystem.Loc
  build-depends:       base                 >= 4.5  && < 5
                     , bytestring
                       -- NOTE: Cabal 1.22 has some backwards incompatible API
                       -- changes. If we want to support older Cabal we need to
                       -- introduce a shim.
                     , Cabal
                     , directory
                     , filepath
                     , ide-backend
                     , optparse-applicative
                     , text
                     , utf8-string

                     , ide-backend-rts

                     , lifted-base
                     , attoparsec
                     , shakespeare
                     , monad-loops
                     , system-fileio
                     , system-filepath
                     , containers
                     , warp
                     , wai
                     , wai-extra
                     , data-default-class
                     , streaming-commons
                     , filemanip
                     , stm
                     , async
                     , network
                     , http-types
                     , ghc
                     , resourcet
                     , transformers
                     , file-embed
                     , template-haskell
                     , process
                     , conduit
                     , conduit-extra
                     , exceptions
                     , warp-tls
                     , http-client
                     , http-conduit
                     , http-reverse-proxy
                     , fsnotify
                     , unix-compat
                     , Glob
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N -with-rtsopts=-I0
  default-extensions:  NoMonomorphismRestriction
                       RankNTypes
                       RecordWildCards
                       NamedFieldPuns
                       StandaloneDeriving
                       BangPatterns
                       PackageImports
  other-extensions:    OverloadedStrings
                       TemplateHaskell
